# L1appV4

./: .replit  README.md  deploy.sh  deploy_cpu.sh  download_code.sh  download_models.sh  flexible_deploy.sh  package-lock.json  package.json  pyproject.toml  reset_data_directory.sh  run_python_backend.py  run_python_backend.sh  setup_data_folder.sh  setup_milvus.sh  start_app.sh  start_llm_server.sh
client/src/: App.tsx  config.ts  main.tsx
client/src/components/: automated-remediation.tsx  layout.tsx  natural-language-query.tsx  pcap-upload.tsx  predictive-analysis.tsx  resolution-feedback.tsx  root-cause-analysis.tsx  timeline-analysis.tsx
client/src/components/dashboard/: analysis-panel.tsx  issues-recommendations-table.tsx  recent-activity.tsx  semantic-search.tsx  stats-card.tsx  upload-panel.tsx
client/src/components/layout/: footer.tsx  header.tsx  (+1 more)
client/src/lib/: api.ts  queryClient.ts  types.ts
client/src/pages/: advanced-analysis.tsx  dashboard.tsx  logs-history.tsx  model-fine-tuning.tsx  semantic-search.tsx  settings.tsx  upload-logs.tsx  vector-store.tsx
deploy/: deploy_app.sh  download_models.sh  optimize_gpu.sh  setup_milvus.sh  start_llm_server.sh
deploy_cpu/: deploy_app.sh  download_models.sh  setup_milvus.sh  start_llm_server.sh
python_backend/: __init__.py  app.py  config.py
python_backend/services/: __init__.py  llm_fine_tuning.py  llm_service.py  log_parser.py  milvus_service.py  pcap_analyzer.py  storage.py
server/: routes.ts  storage.ts
server/services/: llm.ts  log-parser.ts  milvus.ts  perplexity.ts
shared/: schema.ts
(+4 files in other folders)
