[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "llama-cpp-python>=0.3.8",
    "pymilvus>=2.5.8",
    "pyshark>=0.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scapy>=2.6.1",
]
